# oocone

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  doc.yml  release.yml
docs/: mkdocs.yml
docs/api/: oocone.model.md
docs/docs/api/: oocone.errors.md  oocone.md
news/: 12.bugfix.md  15.feature.md  16.bugfix.md  19.bugfix.md  25.bugfix.md  26.feature.md  26.misc.md  28.removal.md  30.bugfix.md  31.removal.md  35.feature.md  36.misc.md  37.removal.md  40.bugfix.md  40.misc.md  41.feature.md  41.removal.md  46.doc.md  50.bugfix.md  52.removal.md  53.dep.md  64.dep.md  67.bugfix.md  69.feature.md
src/oocone/: __init__.py  auth.py  enocoo.py  errors.py  model.py  types.py
src/oocone/_internal/: __init__.py  html_table.py  quirks.py  scrape_consumption.py  scrape_meter_table.py  scrape_photovoltaic.py  scrape_timeseries.py  scrape_traffic_light.py
tasks/: release.py  update_api_responses.py
tests/: __init__.py  conftest.py  test_auth.py  test_enocoo.py  test_html_table.py  test_scrape_consumption.py
tests/_internal/: test_scrape_consumption.py  test_scrape_timeseries.py
tests/data/responses/: getMeterDataWithParam.Kaltwasser.2023-10-29.Letzte7Tage.php  getMeterDataWithParam.Kaltwasser.2023-10-29.Monat.php  getMeterDataWithParam.Kaltwasser.2023-10-29.Tag.php  getMeterDataWithParam.Kaltwasser.2023-10-29.Woche.php  getMeterDataWithParam.Kaltwasser.2023-10-30.Jahr.php  getMeterDataWithParam.Kaltwasser.2023-10-30.Tag.php  getMeterDataWithParam.Kaltwasser.2023-10-30.Woche.php  getMeterDataWithParam.Kaltwasser.2024-01-01.Jahr.php  getMeterDataWithParam.Kaltwasser.2024-01-02.Tag.php  getMeterDataWithParam.Kaltwasser.2024-03-31.Jahr.php  getMeterDataWithParam.Kaltwasser.2024-04-01.Jahr.php  getMeterDataWithParam.Kaltwasser.2024-04-01.Monat.php  getMeterDataWithParam.Kaltwasser.2024-04-01.Tag.php  getMeterDataWithParam.Kaltwasser.2024-04-01.Woche.php  getMeterDataWithParam.Stromverbrauch.2023-10-29.Tag.php  getMeterDataWithParam.Stromverbrauch.2023-10-30.Jahr.php  getMeterDataWithParam.Stromverbrauch.2023-10-30.Monat.php  getMeterDataWithParam.Stromverbrauch.2023-10-30.Tag.php  getMeterDataWithParam.Stromverbrauch.2023-10-30.Woche.php  getMeterDataWithParam.Stromverbrauch.2024-01-01.Jahr.php  getMeterDataWithParam.Stromverbrauch.2024-01-01.Letzte7Tage.php  getMeterDataWithParam.Stromverbrauch.2024-01-01.Tag.php  getMeterDataWithParam.Stromverbrauch.2024-01-01.Woche.php  getMeterDataWithParam.Stromverbrauch.2024-01-02.Monat.php  getMeterDataWithParam.Stromverbrauch.2024-03-31.Jahr.php  getMeterDataWithParam.Stromverbrauch.2024-03-31.Tag.php  getMeterDataWithParam.Stromverbrauch.2024-03-31.Woche.php  getMeterDataWithParam.Stromverbrauch.2024-04-01.Jahr.php  getMeterDataWithParam.Stromverbrauch.2024-04-01.Monat.php  getMeterDataWithParam.Stromverbrauch.2024-04-01.Tag.php  getMeterDataWithParam.Waerme.2023-10-29.Jahr.php  getMeterDataWithParam.Waerme.2023-10-29.Tag.php  getMeterDataWithParam.Waerme.2023-10-30.Monat.php  getMeterDataWithParam.Waerme.2024-01-01.Jahr.php  getMeterDataWithParam.Waerme.2024-01-01.Letzte7Tage.php  getMeterDataWithParam.Waerme.2024-01-01.Tag.php  getMeterDataWithParam.Waerme.2024-01-02.Monat.php  getMeterDataWithParam.Waerme.2024-01-02.Woche.php  getMeterDataWithParam.Waerme.2024-03-31.Jahr.php  getMeterDataWithParam.Waerme.2024-03-31.Tag.php  (+27 more)
tests/data/responses/one_area/: getMeterDataWithParam.Kaltwasser.123.2023-10-29.Tag.php  getMeterDataWithParam.Kaltwasser.123.2024-01-01.Tag.php  getMeterDataWithParam.Kaltwasser.123.2024-01-01.Woche.php  getMeterDataWithParam.Kaltwasser.123.2024-01-02.Monat.php  getMeterDataWithParam.Kaltwasser.123.2024-03-31.Jahr.php  getMeterDataWithParam.Kaltwasser.123.2024-03-31.Monat.php  getMeterDataWithParam.Kaltwasser.123.2024-03-31.Woche.php  getMeterDataWithParam.Stromverbrauch.123.2023-10-29.Tag.php  getMeterDataWithParam.Stromverbrauch.123.2023-10-29.Woche.php  getMeterDataWithParam.Stromverbrauch.123.2024-01-01.Jahr.php  getMeterDataWithParam.Stromverbrauch.123.2024-01-01.Tag.php  getMeterDataWithParam.Stromverbrauch.123.2024-01-02.Tag.php  getMeterDataWithParam.Stromverbrauch.123.2024-03-31.Monat.php  getMeterDataWithParam.Stromverbrauch.123.2024-04-01.Woche.php  getMeterDataWithParam.Waerme.123.2023-10-29.Tag.php  getMeterDataWithParam.Waerme.123.2023-10-29.Woche.php  getMeterDataWithParam.Waerme.123.2023-10-30.Tag.php  getMeterDataWithParam.Waerme.123.2023-10-30.Woche.php  getMeterDataWithParam.Waerme.123.2024-01-02.Tag.php  getMeterDataWithParam.Waerme.123.2024-03-31.Jahr.php  getMeterDataWithParam.Waerme.123.2024-03-31.Monat.php  getMeterDataWithParam.Waerme.123.2024-03-31.Woche.php  getMeterDataWithParam.Waerme.123.2024-04-01.Monat.php  getMeterDataWithParam.Waerme.123.2024-04-01.Tag.php  getMeterDataWithParam.Waerme.123.2024-04-01.Woche.php  getMeterDataWithParam.Warmwasser.123.2023-10-29.Jahr.php  getMeterDataWithParam.Warmwasser.123.2023-10-29.Monat.php  getMeterDataWithParam.Warmwasser.123.2023-10-29.Tag.php  getMeterDataWithParam.Warmwasser.123.2023-10-29.Woche.php  getMeterDataWithParam.Warmwasser.123.2024-01-01.Jahr.php  getMeterDataWithParam.Warmwasser.123.2024-01-01.Monat.php  getMeterDataWithParam.Warmwasser.123.2024-01-01.Tag.php  getMeterDataWithParam.Warmwasser.123.2024-01-02.Tag.php  getMeterDataWithParam.Warmwasser.123.2024-01-02.Woche.php  getMeterDataWithParam.Warmwasser.123.2024-03-31.Woche.php  getMeterDataWithParam.Warmwasser.123.2024-04-01.Monat.php  getMeterDataWithParam.Warmwasser.123.2024-04-01.Tag.php  (+14 more)
tests/enocoo/: test_get_area_ids.py  test_get_areas.py  test_get_individual_consumption.py  test_get_meter_table.py  test_get_quarter_photovoltaic_data.py  test_get_traffic_light_status.py
tests/enocoo/__snapshots__/: test_get_areas.ambr  test_get_individual_consumption.ambr  test_get_quarter_photovoltaic_data.ambr
(+93 files in other folders)
