[project]
name = "oocone"
description = "Unofficial library for interacting with an enocoo energy management system"
authors = [{ name = "Simon Leiner", email = "simon@leiner.me" }]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.13.2"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.3",
]

[dependency-groups]
dev = [
    "towncrier>=24.8.0",
]
doc = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "typeguard>=4.4.4",
    "tzdata>=2025.2",
]
mypy = [
    "mypy>=1.17.1",
    "nox>=2025.5.1",
    {include-group = "dev"},
    {include-group = "test"},
]

[project.urls]
Repository = "https://github.com/sleiner/oocone"
Homepage = "https://github.com/sleiner/oocone"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
package-dir = "src"

[tool.pdm.scripts]
release = "python -m tasks.release"
update_api_responses = "python -m tasks.update_api_responses"
test = "pytest tests/"
doc = {shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview"}
lint = "pre-commit run --all-files"

[tool.pytest.ini_options]
markers = [
    "mock_api: mark test as using a mock of the enocoo website",
]
asyncio_mode = "auto"
addopts = """\
    --typeguard-packages=oocone \
    --cov=oocone \
    --cov-branch \
    --cov-report=html \
    --cov-report=term \
"""
asyncio_default_fixture_loop_scope = "function"

# the productive code already disables a number of warnings, but pytest resets the filters -.-
# So we instruct pytest explicitly to disable the warnings.
filterwarnings = [
    "ignore::bs4.MarkupResemblesLocatorWarning:oocone.auth",
]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL"
]

ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "COM812", # incompatible with formatter
    "D203",   # no-blank-line-before-class (incompatible with formatter)
    "D212",   # multi-line-summary-first-line (incompatible with formatter)
    "ISC001", # incompatible with formatter
    "N818",   # fully custom names for exceptions are fine
    "SIM108", # usage of the ternary operator may hurt readability
]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = [
    "D", # noxfile.py does not need to be documented
]
"tasks/*.py" = [
    "D103",   # all of these are scripts, without any public API
    "INP001", # this is not a namespace package
]
"tasks/release.py" = [
    # This source code is inherited from the template.
    # We want to avoid changing it to adapt to lints.
    "ALL",
]
"tests/**" = [
    "D104", # we do not need module docstrings for the tests
    "S101", # assert is allowed in tests
    "SLF001", # accessing private members is fine in unit tests
]


[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["oocone"]

[tool.mypy]
follow_imports = "silent"
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
namespace_packages = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["pytest_aiohttp.plugin"]
ignore_missing_imports = true

[tool.towncrier]
package = "oocone"
filename = "CHANGELOG.md"
start_string = "<!-- insertion marker -->"
title_format = "## [v{version}](https://github.com/sleiner/oocone/releases/tag/{version}) ({project_date})"
issue_format = "[#{issue}](https://github.com/sleiner/oocone/issues/{issue})"
underlines = ["", "", ""]
directory = "news/"

[[tool.towncrier.type]]
directory = "feature"
name = "Features & Improvements"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dep"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removals and Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true
